--- a/cogniswap-backend/package.json
+++ b/cogniswap-backend/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sequelize": "^6.31.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
