--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-font": "~11.4.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.1",
     "react-native-webview": "^13.2.2"
   },
   "devDependencies": {
