--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.1",
-    "react-native-webview": "^13.2.2"
+    "react-native-webview": "^13.2.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
