--- a/cogniswap-app/package.json
+++ b/cogniswap-app/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "7.2.0",
     "expo": "^49.0.0",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.1",
-    "react-native-webview": "^13.2.2",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
     "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0"
+    "react-native-webview": "^13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
